--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/califortovo/PomorodoTimer#readme",
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "sass": "^1.37.2"
   }
 }
