--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/califortovo/PomorodoTimer#readme",
   "dependencies": {
+    "blocks": "^0.3.5",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2"
