--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "blocks": "^0.3.5",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "reset.css": "^2.0.2"
   },
   "devDependencies": {
     "sass": "^1.37.2"
